# xnand

./: LICENSE  README.md  default.nix  hnixbot.cabal  module.nix  xnand.cabal
nix/: module.nix  options.nix
src/: Config.hs  Main.hs  Plugins.hs  Types.hs
src/Frontend/: AMQP.hs  Types.hs
src/Plugins/: Commands.hs  Factoids.hs
src/Plugins/Commands/: Cache.hs  Decide.hs  NARUrl.hs
